--- a/diretivas.html
+++ b/diretivas.html
@@ -24,7 +24,7 @@
 				<center>
 					<div class="jumbotron">
 						<!-- SECTION TITLE -->
-						<h2>Tudo pronto?</h2>
+						<h2>Diretivas</h2>
 					</div>
 				</center>
 			</div>
@@ -36,10 +36,10 @@
 							<li><a href="index.html">O que é o OpenMP?</a></li>
 							<br>
 
-							<li class="active"><a href="tudo_pronto.html">Tudo pronto?</a></li>
+							<li><a href="tudo_pronto.html">Tudo pronto?</a></li>
 							<br>
 
-							<li><a href="diretivas.html">Diretivas</a></li>
+							<li class="active"><a href="diretivas.html">Diretivas</a></li>
 							<br>
 
 							<li><a href="clausulas.html">Cláusulas</a></li>
