texto está feito

--- a/referencias.html
+++ b/referencias.html
@@ -24,7 +24,7 @@
 				<center>
 					<div class="jumbotron">
 						<!-- SECTION TITLE -->
-						<h2>Tudo pronto?</h2>
+						<h2>Referências</h2>
 					</div>
 				</center>
 			</div>
@@ -56,42 +56,15 @@
 
 							<li><a href="erros.html">Erros frequentes</a></li>
 							<br>
+
+							<li><a href="referencias.html">Referências</a></li>
+							<br>
 						</ul>
 					</nav>
 				</div>
 				<!-- SECTION CONTENT -->
 				<div class="col-sm-14">
-					<p>
-						Será que está mesmo pronto para continuar no tutorial? Veja:
-						<div class="container-fluid">
-							<ul>
-								<li>Antes de começar, escolha o seu editor de texto preferido. Ao longo do tutorial, a escolha dele não irá influenciar em nada o progresso da aprendizagem.</li><br>
-								<li>Para compilar e correr o OpenMP irá apenas ter de verificar se o compilador do seu dispositivo suporta OpenMP. A seguir apresentaremos uma lista com alguns dos compiladores que suportam esta API. Caso o seu compilador não suporte, instale um compilador presente na lista. Para curiosidade e caso queira usar o mesmo compilador presente nos exemplos opte por instalar o GNU.</li><br>
-							<b>Nota: </b>As seguintes tabelas que contêm informação sobre LC’s dos compiladores e os seus respectivos comandos de compilação foram retirados do site da LAWRENCE LIVERMORE NATIONAL LABORATORY.
-
-							<br>
-							<center>	
-								<img src="img/tabela_1.png">
-							</center>
-								<li>Para finalizar o “aquecimento” deste tutorial, necessita apenas saber os comandos de compilação e respetivas flags do OpenMP do seu compilador.</li><br>
-							<br>
-							<center>
-								<img src="img/tabela_2.png">
-							</center>
-							</ul>
-							<br>
-							<b>Nota:</b> para mais informações é melhor consultar os manuais dos compiladores.
-
-							<h3>Erros comuns:</h3>
-							<div class="container-fluid">
-								<ul>
-									<li>Falta da flag do respectivo compilador no momento de compilação;</li><br>
-									<li>No momento da criação de um projeto é necessário autorizar o "Open MP Support".</li><br>
-								</ul>
-							</div>
-						</div>
-					</p>
-
+					
 				</div>
 			</div>
 		</div>
