--- a/variaveis.html
+++ b/variaveis.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+ 		<script src="myscripts.js"></script>
  		<!-- Set character set to display latin characters -->
  		<meta charset="UTF-8">
 
@@ -55,9 +55,6 @@
 							<br>
 
 							<li><a href="erros.html">Erros frequentes</a></li>
-							<br>
-
-							<li><a href="referencias.html">Referências</a></li>
 							<br>
 						</ul>
 					</nav>
