--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<center>
 					<div class="jumbotron">
 						<!-- SECTION TITLE -->
-						<h2>Introdução</h2>
+						<h2>O que é o OpenMP?</h2>
 					</div>
 				</center>
 			</div>
@@ -61,6 +61,20 @@
 				</div>
 				<!-- SECTION CONTENT -->
 				<div class="col-sm-14">
+
+					<p>
+						<h4>Procuras dar o salto para a programação paralela e distribuída? <br>
+							Desejas aprender uma nova forma de programar? <br>
+							Então este tutorial é para ti!</h4>
+							<br><br>
+							
+					</p>
+
+					<br>
+
+					<hr>
+
+						<center><h3>O que é o OpenMP?</h3></center>
 					<p>
 						O OpenMP (Open Multi-Processing), é uma interface de programação (API) portátil, usada para programação paralela com memória partilhada para arquiteturas de múltiplos processadores, para as linguagens de programação de C, C++ e Fortran. OpenMP implementa o uso de multithreading através do modelo “fork & join”. O openMP é composto por 3 componentes principais da API, sendo estes: diretivas de compilador, biblioteca de execução e variáveis de ambiente.
 					</p>
